# spacetree

./: .gitignore  readme.md
data processing/: angle calculation.py  proc.py
model/: model.py
sim/: CMakeLists.txt  readme.md  viz.py
sim/src/: bhut.cpp  bhut.hpp  main.cpp  pybind.cpp
